@@ -1,10 +1,13 @@
 use lib '.';
+use File::Basename 'basename';
 use t::Helper;
 
 plan skip_all => 'TEST_REALFAVICONGENERATOR_API_KEY=is_not_set'
   unless $ENV{TEST_REALFAVICONGENERATOR_API_KEY};
 
 my $t = t::Helper->t(pipes => [qw(Favicon)]);
+my %sub_asset;
+
 $t->app->asset->pipe('Favicon')->api_key($ENV{TEST_REALFAVICONGENERATOR_API_KEY});
 $t->app->asset->process('favicon.ico' => '/image/master_favicon_thumbnail.png');
 
@@ -19,15 +22,30 @@ $t->get_ok('/')->status_is(200)
   ->element_exists('[href$="32x32.png"][rel="icon"][sizes="32x32"][type="image/png"]')
   ->element_exists('[href$="safari-pinned-tab.svg"][color="#536DFE"][rel="mask-icon"]')
   ->element_exists('[href$="site.webmanifest"][rel="manifest"]')
+  ->element_exists('[name="msapplication-config"][content$="browserconfig.xml"]')
   ->element_exists('[name="msapplication-TileColor"][content="#536DFE"]')
   ->element_exists('[name="theme-color"][content="#536DFE"]');
 
 # Make sure that all the [href] above looks like /asset/19b5e7c873/apple-touch-icon-57x57.png
-$t->tx->res->dom->find("[href]")->each(
+$t->tx->res->dom->find("[href], [content]")->each(
   sub {
-    like $_->{href}, qr{^/asset/\w+/\w+.*$}, "href $_->{href}";
+    my $src = $_->{href} || $_->{content};
+    return if $src =~ m!\#!;    # Skip content="#536DFE"
+    my $name = basename $src;
+    $sub_asset{$name} = $src;
+    like $src, qr{^/asset/\w+/\w+.*$}, "meta $src";
   }
 );
+
+$t->get_ok($sub_asset{'site.webmanifest'})->status_is(200)
+  ->json_like('/icons/0/src', qr{^/asset/\w+/[\w-]+\.png$})
+  ->json_like('/icons/1/src', qr{^/asset/\w+/[\w-]+\.png$});
+
+$t->get_ok($sub_asset{'browserconfig.xml'})->status_is(200);
+like $t->tx->res->dom->at('square150x150logo[src]')->{src},
+  qr{^/asset/\w+/mstile-150x150.png}, 'browserconfig.xml square150x150logo';
+
+#$t->get_ok($sub_asset{'manifest.webapp'})->content_is(1);
 
 {
   no warnings 'redefine';
