@@ -2,6 +2,9 @@ Revision history for perl distribution Mojolicious-Plugin-AssetPack
 
 2.05 Not Released
  - Fix s///r is not supported in older Perls #136
+ - Fix Favicon rendering of manifest and browserconfig
+ - Add Asset::renderer() for dynamic assets
+ - Renamed Asset::renderer() to tag_for()
 
 2.04 2018-07-19T17:39:06+0800
  - Add support for generating manifest with Favicon pipe
